# GenreReveal

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot.py
DistMemCpu/: CMakeLists.txt  main.cpp
DistMemGpu/: CMakeLists.txt  cuda_kMeans.cu  cuda_kMeans.cuh  main.cpp
OpenMp/: CMakeLists.txt  main.cpp
Serial/: CMakeLists.txt  main.cpp
SharedCode/: CMakeLists.txt  Config.hpp  Point.hpp  readcsv.hpp  serialVerify.hpp  timer.hpp
SharedMemCpu/: CMakeLists.txt  main.cpp
SharedMemGpu/: CMakeLists.txt  cuda_kMeans.cu  cuda_kMeans.cuh  main.cpp
